--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -13,7 +13,7 @@
 * 理解为什么程序员们要将软件划分成一系列函数。
 * 学会通过阅读函数标题来了解现有函数的用法。
 
-## 3.1 `cmath`系列函数
+## 3.1 `cmath`函数
 
 C++为我们定义了大量可用于双精度浮点运算的数学函数和三角函数。下面是其中的两个：
 
@@ -34,7 +34,7 @@ function-name(*arguments*)
 sqrt(81.0) // An example of a function call
 ```
 
-Functions may have zero, one, or even more arguments. Although most math functions require exactly one argument, the pow function requires exactly two arguments. In the following function call, the function name is pow (for power), the arguments are base and power, and the function call pow(base, power) is replaced with ${base}^{power}$:
+函数通常会有零个或多个参数。尽管大多数数学函数都只需要一个参数，但也会有像`pow()`这种需要两个参数的函数。在接下来的这个函数调用中，函数的名称是`pow`（即power），参数是底数和指数。也就是说，函数调用`pow(base, power)`代表的就是指数运算${base}^{power}$：
 
 ```C++
 double base = 2.0;
@@ -42,23 +42,23 @@ double power = 3.0;
 cout << pow(base, power); // Output: 8.0
 ```
 
-Any argument used in a function call must be an expression from an acceptable class. For example, the function call sqrt("Bobbie") results in an error because the argument is not one of the numeric classes.
+在函数调用的过程中，我们使用的所有参数都必须是一个该函数可接受类型的表达式。例如`sqrt("Bobbie")`这个调用就会出错，因为该参数并不属于数字类型。
 
-The function must also be supplied with reasonable arguments. For example, the function call sqrt(-4.0) could be a problem because -4.0 is not in the domain of sqrt. Th e square root function is not defined for negative numeric values. The sqrt function operates correctly only if certain conditions are met. For sqrt, the argument must be greater than or equal to 0.0. Here are some mathematical and trigonometric functions available when you include the cmath function library.
+另外，我们提供给函数的参数还必须要合乎要求。例如`sqrt(-4.0)`这个函数调用就可能是有问题的，因为-4.0并不在`sqrt`函数所要求的域中，平方根函数并没有为负数值做出相因的定义。也就是说，事实上`sqrt`函数只有在某些特定条件得到满足时才会正常执行。对于`sqrt`函数而言，这个条件就是它的参数值必须大于或等于0.0。下面，我们再来看一下`cmath`函数库中还有哪些可用的数学函数和三角函数。
 
- **A Partial List of `cmath` Functions.** *Note:* double *before the function name is the return type*
+ **`cmath`函数库中的部分函数。** *提示：下面的`double`代表的是函数的返回值类型*
 
-| Function | What it Returns | Example Call | Result |
-|----------|-----------------|--------------|--------|
-| double ceil(double x) | Smallest integer ≥ x | ceil(2.1) | 3.0 |
-| double cos(double x)  | Cosine of x radians | cos(1.0) | 0.5403 |
-| double fabs(double x) | Absolute value of x | fabs(-1.5) | 1.5 |
-| double oor(double x)  | Largest integer ≤ x | oor(2.9) | 2.0 |
-| double pow(double x, double y) | $x^y$ | pow(2, 4) | 16.0 |
-| double sin(double x) | Sine of x radians | sin(1.0) | 0.84147 |
-| double sqrt(double x) | Square root of x | sqrt(4.0) | 2.0 |
+| 函数 | 返回值说明 | 调用示例 | 示例结果 |
+|-----|-----------|---------|--------|
+| `double ceil(double x)` | 返回大于等于`x`的最小整数 | `ceil(2.1)` | 3.0 |
+| `double cos(double x)`  | 返回角度`x`的余弦值 | `cos(1.0)` | 0.5403 |
+| `double fabs(double x)` | 返回`x`的绝对值 | `fabs(-1.5)` | 1.5 |
+| `double floor(double x)`  | 返回小于等于`x`的最大整数 | `floor(2.9)` | 2.0 |
+| `double pow(double x, double y)` | 返回$x^y$ | `pow(2, 4)` | 16.0 |
+| `double sin(double x)` | 返回角度`x`的正弦值 | `sin(1.0)` | 0.84147 |
+| `double sqrt(double x)` | 返回`x`的平方根 | `sqrt(4.0)` | 2.0 |
 
-With `#include <cmath>` at the “top” of the program near `#include <iostream>`, the programmer can successfully compile a program with calls to the functions declared in cmath. This means that the following program compiles successfully:
+程序员只需要在`#include <iostream>`这条语句的上面加上一条`#include <cmath>`，就可以成功调用到`cmath`函数库中声明的函数了。也就是说，下面这段程序将会被成功编译：
 
 ```C++
 // Show some mathematical functions available from cmath
@@ -75,7 +75,7 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 fabs(-2.1): 2.1
@@ -84,29 +84,27 @@ floor(-2.1): -3
 pow(-2.1, 2.0): 4.41
 ```
 
-It should be noted that integer expressions may also be used as arguments to cmath functions. As with assignment, the integer value will be promoted to a double. So sqrt(4) returns the same result as sqrt(4.0) without error.
+需要提醒的是，这些`cmath`函数的参数也都可以使用整数表达式来调用。和赋值操作一样，它们会执行将整数值升格成`double`类型，所以`sqrt(4)`与`sqrt(4.0)`会返回相同的结果，不会有任何错误。
 
-**SELF-CHECK**
+**自检题**
 
-3-1 Evaluate pow(4.0, 3.0)
+3-1 请求取`pow(4.0, 3.0)`的值。
 
-3-2 Evaluate pow(3.0, 4.0)
+3-2 请求取`pow(3.0, 4.0)`的值。
 
-3-3 Evaluate floor(1.6 + 0.5)
+3-3 请求取`floor(1.6 + 0.5)`的值。
 
-3-4 Evaluate ceil(1.6 - 0.5)
+3-4 请求取`ceil(1.6 - 0.5)`的值。
 
-3-5 Evaluate fabs(1.6 - 2.6)
+3-5 请求取`fabs(1.6 - 2.6)`的值。
 
-3-6 Evaluate sqrt(16.0)
+3-6 请求取`sqrt(16.0)`的值。
 
-## 3.2 PROBLEM SOLVING WITH cmath FUNCTIONS
+## 3.2 使用`cmath`函数解决问题
 
-> *Problem:* Write a program that rounds a number to a specifi c number
-> of decimal places. For example, 3.4589 rounded to two decimal places
-> should be 3.46 and 3.4589 rounded to one decimal place should be 3.5.
+*问题：*请编写一个能将指定数字四舍五入到某个小数位的程序。例如，将3.4589四舍五入到两位小数就是3.46，而四舍五入到一位小数就是3.5。
 
-### 3.2.1 ANALYSIS
+### 3.2.1 分析
 
 The analysis/design/implementation software development strategy begins with these analysis activities:
 
@@ -115,7 +113,7 @@ The analysis/design/implementation software development strategy begins with the
 3. Decide what object(s) the user must enter to get the answer—the input.
 4. Write test cases (two were given above).
 
-### 3.2.2 DESIGN
+### 3.2.2 设计
 
 The deliverable from this design phase is the algorithm. A pseudocode algorithm can be developed with the help of the Input/Process/Output pattern. Th at pattern is repeated here for your convenience:
 
@@ -138,7 +136,7 @@ The Input/Process/Output pattern helps guide placement of the appropriate activi
 3. Prompt for the number of decimal places (call it n).
 4. Input n.
 5. Round x to n decimals.
-6. Display the modifi ed state of x.
+6. Display the modified state of x.
 
 Steps 1, 2, 3, 4, and 6 have straightforward C++ implementations. They can be implemented as input and/or output statements. However, the details of step 5, “Round x to n decimals,” are not present. Step 5 needs refi nement. With the rest of the problem out of the way, you can focus on the more diffi cult process of rounding x to n decimals. A solution is a bit tricky, so one method is provided.
 
@@ -155,29 +153,21 @@ To round a number x to n decimal places, fi rst multiply x by 10^n^. Then add 0.
    * d. Let x become x divided by 10^n^.
 6. Display the modifi ed state of x.
 
-The following trace of program execution simulates what will happen to
-x when it starts at
+The following trace of program execution simulates what will happen to x when it starts at 3.4567 and is rounded to two decimal places.
 
-  -----------------------------------------------------------
-  3.4567 and is rounded to two decimal places.   
-                                                 
-  > **Round 3.4567 to Two Decimal Places**       
-  ---------------------------------------------- ------------
-  > x = x \* 10^n^ = 3.4567 \* 10^2^             = 345.67
+**Round 3.4567 to Two Decimal Places**
 
-  > x = x + 0.5 = 345.67 + 0.5                   > = 346.17
+ x = x \* $10^n$     =      3.4567 \* $10^2$    =    345.67
 
-  > x = oor(x) = oor(346.17)                     > = 346
-  -----------------------------------------------------------
+ x = x + 0.5         =      345.67 + 0.5        =    346.17
 
-> x = x / 10^n^ = 346.17 / 100.0 = 3.46
+ x = floor(x)        =      floor(346.17)       =    346
 
-SELF-CHECK
+ x = x / $10^n$      =      346.17 / 100.0      =    3.46
 
-> 3-7 Trace the same algorithm with the diff erent example problem of
-> rounding 9.99 to one decimal place. What is the result? Write the new
-> value for x in the space provided (x changes state four times after
-> being input).
+**SELF-CHECK**
+
+3-7 Trace the same algorithm with the diff erent example problem of rounding 9.99 to one decimal place. What is the result? Write the new value for x in the space provided (x changes state four times after being input).
 >
 > Algorithm
 >
