--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -46,7 +46,7 @@ cout << pow(base, power); // Output: 8.0
 
 另外，我们提供给函数的参数还必须要合乎要求。例如`sqrt(-4.0)`这个函数调用就可能是有问题的，因为-4.0并不在`sqrt`函数所要求的域中，平方根函数并没有为负数值做出相因的定义。也就是说，事实上`sqrt`函数只有在某些特定条件得到满足时才会正常执行。对于`sqrt`函数而言，这个条件就是它的参数值必须大于或等于0.0。下面，我们再来看一下`cmath`函数库中还有哪些可用的数学函数和三角函数。
 
- **`cmath`函数库中的部分函数。** *提示：下面的`double`代表的是函数的返回值类型*
+ **`cmath`函数库中的部分函数** *提示：下面的`double`代表的是函数的返回值类型*
 
 | 函数 | 返回值说明 | 调用示例 | 示例结果 |
 |-----|-----------|---------|--------|
@@ -102,423 +102,333 @@ pow(-2.1, 2.0): 4.41
 
 ## 3.2 使用`cmath`函数解决问题
 
-*问题：*请编写一个能将指定数字四舍五入到某个小数位的程序。例如，将3.4589四舍五入到两位小数就是3.46，而四舍五入到一位小数就是3.5。
+*问题：* 请编写一个能将指定数字四舍五入到某个小数位的程序。例如，将3.4589四舍五入到两位小数就是3.46，而四舍五入到一位小数就是3.5。
 
 ### 3.2.1 分析
 
-The analysis/design/implementation software development strategy begins with these analysis activities:
+下面我们按照软件开发的分析-设计-实现的步骤来进行，先进行如下分析动作：
 
-1. Read and understand the problem.
-2. Decide what object(s) represent the answer—the output.
-3. Decide what object(s) the user must enter to get the answer—the input.
-4. Write test cases (two were given above).
+1. 阅读并理解目标问题。
+2. 定义用来表示答案的对象——即输出。
+3. 定义用为获得答案必须键入相关内容的对象——即输入。
+4. 编写测试用例（我们在上面已经提供了两个）。
 
 ### 3.2.2 设计
 
-The deliverable from this design phase is the algorithm. A pseudocode algorithm can be developed with the help of the Input/Process/Output pattern. Th at pattern is repeated here for your convenience:
+设计阶段的任务是提出算法。我们在这里可以借助IPO算法模式先开发出给予伪代码的算法。为了方便后续讲解，我们在这里先复习一下这个算法模式：
 
-**Pattern:** Input/Process/Output (IPO)
+| 模式： | 输入/处理/输出（IPO） |
+|-------|---------------------|
+| 问题： | 程序需要基于用户的输入来计算并显示我们所需的信息。 |
+| 纲要： | 1. 获取输入数据。<br> 2. 用某种有意义的方式处理数据。<br> 3. 输出结果。<br> |
+| 示例： | 请参考我们接下来对于将`x`四舍五入到n位小数这个问题的描述。 |
 
-**Problem:** The program requires input from the user in order to compute and display the desired information.
+IPO算法模式可以很好地帮助我们安排出良好的操作顺序。在这里，算法代表的是一般性设计，它是解决方案的纲要。为了让算法看起来更为详尽一些，我们还在其中的两处引入了先提示再输入模式，具体如下：
 
-**Outline:**
+1. 提示用户指定要进行四舍五入的数字（并将其命名为`x`）。
+2. 用户输入`x`的值。
+3. 提示用户指定目标的小数位数（并将其命名为`n`）。
+4. 用户输入`n`的值。
+5. 将`x`四舍五入到`n`位小数。
+6. 显示`x`被修改之后的值。
 
-1. Obtain the input data.
-2. Process the data in some meaningful way.
-3. Output the results.
+步骤1、2、3、4和6用C++实现起来都非常简单，它们直接用输入/输出语句就可以实现了。但第五步“将`x`四舍五入到`n`位小数”描述得还不够详尽。下面我们要继续改进第五步的设计。在其余部分不需要再考虑的情况下，我们现在可以将注意力集中到如何将`x`四舍五入到`n`位小数这个更难的问题上来了。这部分的解决方案的确会有点没法，下面我们来看其中一种方法。
 
-**Example:** See the problem of rounding x to n decimals that follows.
+为了将数字`x`四舍五入到`n`位小数，首先我们要让`x`先乘以$10^n$。然后再将新的`x`值加上0.5。接着再对`x`调用`floor(x)`。最后再让`x`除以$10^n$。于是，上述算法就多增加了以下四个步骤：
 
-The Input/Process/Output pattern helps guide placement of the appropriate activities in the proper order. Th e algorithm represents the general design—an outline of the solution. Adding two usages of the Prompt then Input pattern and a more detailed algorithm might now look like this:
+1. 提示用户指定要进行四舍五入的数字（并将其命名为`x`）。
+2. 用户输入`x`的值。
+3. 提示用户指定目标的小数位数（并将其命名为`n`）。
+4. 用户输入`n`的值。
+5. 将`x`四舍五入到`n`位小数的步骤如下：
+   * a. 将`x`的值修改成$x * 10^n$。
+   * b. 将`x`的值加上0.5。
+   * c. 将`x`的值修改成`floor(x)`。
+   * d. 将`x`的值修改成$x / 10^n$。
+6. 显示`x`被修改之后的值。
 
-1. Prompt for the number to round (call it x).
-2. Input x.
-3. Prompt for the number of decimal places (call it n).
-4. Input n.
-5. Round x to n decimals.
-6. Display the modified state of x.
+下面我们来模拟跟踪一下程序执行的过程，看看当`x`为3.4567时，它是如何被四舍五入到两位小数的。
 
-Steps 1, 2, 3, 4, and 6 have straightforward C++ implementations. They can be implemented as input and/or output statements. However, the details of step 5, “Round x to n decimals,” are not present. Step 5 needs refi nement. With the rest of the problem out of the way, you can focus on the more diffi cult process of rounding x to n decimals. A solution is a bit tricky, so one method is provided.
+**将3.4567四舍五入到两位小数的过程：**
 
-To round a number x to n decimal places, fi rst multiply x by 10^n^. Then add 0.5 to the new state of x. Th en store oor(x) in x. Finally, divide x by 10^n^. Th e refined algorithm adds this fourstep refinement:
+$$ x = x * 10^n     =      3.4567 * 10^2    =    345.67 $$
+$$ x = x + 0.5      =      345.67 + 0.5     =    346.17 $$
+$$ x = floor(x)     =      floor(346.17)    =    346    $$
+$$ x = x / 10^n     =      346.17 / 100.0   =    3.46   $$
 
-1. Prompt for x, the number to round.
-2. Input x.
-3. Prompt for n, which is the number of decimal places.
-4. Input n.
-5. Round x to n decimals like this:
-   * a. Let x become x \* 10^n^.
-   * b. Add 0.5 to x.
-   * c. Let x become oor(x).
-   * d. Let x become x divided by 10^n^.
-6. Display the modifi ed state of x.
+**自检题**
 
-The following trace of program execution simulates what will happen to x when it starts at 3.4567 and is rounded to two decimal places.
+3-7 请模拟跟踪同一个算法在不同问题示例下的运行过程，当我们要将9.99四舍五入到一位小数是，其结果会是什么？请在下列空白处写下对应的新的`x`的值（即`x`在输入之后的四次变化）。
 
-**Round 3.4567 to Two Decimal Places**
+| 算法步骤                                                | x | n |
+|--------------------------------------------------------|---|---|
+| 1. 提示用户指定要进行四舍五入的数字（并将其命名为`x`）。       | ? | ? |
+| 2. 用户输入`x`的值。                                  | 9.99 | ? |
+| 3. 提示用户指定目标的小数位数（并将其命名为`n`）。         | 9.99 | ? |
+| 4. 用户输入`n`的值。                                  | 9.99 | 1 |
+| 5. 将`x`的值修改成$x * 10^n$。                       | _____ | 1 |
+| 6. 将`x`的值加上0.5。                                | _____ | 1 |
+| 7. 将`x`的值修改成`floor(x)`。                       | _____ | 1 |
+| 8. 将`x`的值修改成$x / 10^n$。                       | _____ | 1 |
+| 9. 显示`x`被修改之后的值。                            | _____ | 1 |
 
- x = x \* $10^n$     =      3.4567 \* $10^2$    =    345.67
+### 3.2.3 实现
 
- x = x + 0.5         =      345.67 + 0.5        =    346.17
+下面，我们来看上述算法被转换成完整C++源码之后的版本。请留意一下源代码中的注释，我们在其中标出了各算法步骤在转换成c++之后的位置。
 
- x = floor(x)        =      floor(346.17)       =    346
+```C++
+// Round a given number to a specific number of decimal places
 
- x = x / $10^n$      =      346.17 / 100.0      =    3.46
+#include <iostream>     // For cin and cout 
+#include <cmath>        // For pow(10, n) and floor(x)
+using namespace std;
 
-**SELF-CHECK**
+int main() {
+    // Declare objects identied during analysis
+    double x = 0.0;
+    double n = 0.0;
+                                                    // Algorithm step number:
+    // Input
+    cout << "Enter number to round : ";             // 1.
+    cin >> x;                                       // 2.
+    cout << "Enter number of decimal places : " ;   // 3.
+    cin >> n;                                       // 4.
 
-3-7 Trace the same algorithm with the diff erent example problem of rounding 9.99 to one decimal place. What is the result? Write the new value for x in the space provided (x changes state four times after being input).
->
-> Algorithm
->
-> x n 1. Prompt for the number to round (call it x). ? ?
+    // Process (Round x to n decimals)
+    x = x * pow(10, n);                             // 5a.
+    x = x + 0.5;                                    // b.
+    x = floor(x);                                   // c.
+    x = x / pow(10, n);                             // d.
 
-2.  Input x. 9.99 ?
+    // Output (Display the modied state of x)
+    cout << "Rounded number : " << x << endl;        // 6.
 
-3.  Prompt for the number of decimal places (call it n). 9.99 ?
+    return 0;
+}
+```
 
-4.  Input n. 9.99 1
+**程序会话**
 
-5.  Let x become x \* 10^n^. \_\_\_\_\_ 1
+```shell
+Enter number to round : ***3.4567***
+Enter number of decimal places : ***2***
+Rounded number : 3.46
+```
 
-6.  Add 0.5 to x. \_\_\_\_\_ 1
+**自检题**
 
-7.  Let x become oor(x). \_\_\_\_\_ 1
+3-8 请针对上述程序再列举三个测试用例。
 
-8.  Let x become x divided by 10^n^. \_\_\_\_\_ 1
+3-9 在上述程序中，当用户输入`x`为3.15，`n`为1时，`x`的最终值是多少？
 
-9.  Display the modifi ed state of x. \_\_\_\_\_ 1
+3-10 请根据第56页列出的“`cmath`函数库中的部分函数”，找出一个稍微有些不同的算法来完成相同的任务，只不过这次3.15四舍五入到一位小数的结果应该是3.1而不是3.2。（*提示：* 我们可以考虑将“加上0.5”这个步骤改成“减去0.5”。）
 
-3.2.3 IMPLEMENTATION
+3-11 请写出以下函数调用的返回值。
 
-> Th e complete C++ source code version is a translation of the previous
-> algorithm. Notice that the algorithm steps are embedded as comments in
-> the source code to show how each was translated into C++.
->
-> // Round a given number to a speci c number of decimal places
->
-> \#include <iostream> // For cin and cout \#include <cmath>
-> // For pow(10, n) and oor(x) using namespace std;
->
-> int main() {
->
-> // Declare objects identi ed during analysis double x = 0.0; double n
-> = 0.0;
+* a. pow(2.0, 4.0)  
+* b. sqrt(16.0)
+* c. ceil(-1.7)
+* d. floor(1.0)
+* e. fabs(-23.4)
+* f. pow(4.0, 2.0)
 
-// Algorithm step number:
+## 3.3 CALLS TO DOCUMENTED FUNCTIONS
 
-> // Input cout << "Enter number to round : "; // 1. cin >>
-> x; // 2. cout << "Enter number of decimal places : " ; // 3. cin
-> >> n; // 4.
->
-> // Process (Round x to n decimals) x = x \* pow(10, n); // 5a. x = x +
-> 0.5; // b. x = oor(x); // c. x = x / pow(10, n); // d.
->
-> // Output (Display the modi ed state of x) cout << "Rounded
-> number : " << x << endl; // 6.
->
-> return 0; }
->
-> Dialogue
->
-> Enter number to round : ***3.4567***
->
-> Enter number of decimal places : ***2***
->
-> Rounded number : 3.46
+All functions must first be declared with a function heading so the compiler can determine whether the function calls are correct. These function headings also help the programmer properly call those functions. If you peruse the fi le cmath, you will see many such function headings. 
 
-SELF-CHECK
+This section concentrates on how to read these function headings and how to use other documentation describing what a particular function expects and what that function will do. These are called the function’s preconditions and postconditions, respectively.
 
-3-8 List three more test cases for the rounding program above.
+### 3.3.1 PRECONDITIONS AND POSTCONDITIONS
 
-3-9 What is the fi nal state of x after the user enters 3.15 for x and 1
-for n?
+For a function to behave properly, certain conditions are presumed. Consider the sqrt function, which presumes that the argument is greater than or equal to 0.0. Th e *preconditions* of a function state assumptions made about arguments to the function. If the preconditions are not met, all bets are off —the function’s behavior is undefi ned. Some systems cause program termination with an arithmetic overflow error. Other systems may return values such as -1.\#IND or nan, which represents the value “Not a Number.” Th e function call must satisfy the preconditions in order to have predictable results.
 
-> 3-10 Given the table “A Partial List of cmath Functions" on p. 56, fi
-> nd a slightly diff erent algorithm that accomplishes the same task
-> where 3.15 rounded to one decimal place would be
->
-> 3.1 instead of 3.2. (*Hint*: Consider subtracting 0.5 rather than
-> adding it.) 3-11 What values are returned with these function calls?
+The other part of the contract is the *postconditions*—the statements that describe what the function does if the preconditions were met. The pre- and postconditions are often written as part of the function documentation. For example, here is the sqrt function documented with preconditions and postconditions:
 
-  a\. pow(2.0, 4.0)   d\. oor(1.0)
-  ------------------- -------------------
-  b\. sqrt(16.0)      e\. fabs(-23.4)
-  c\. ceil(-1.7)      f\. pow(4.0, 2.0)
+```C++
+double sqrt(double x)
+// precondition: x is not negative (x >= 0)
+// postcondition: Square root of x replaces the function call
+```
 
-3.3 CALLS TO DOCUMENTED FUNCTIONS
+The comments indicate the argument must be greater than or equal to 0.0. If this precondition is met, the square root of that argument is returned to the *client*—the code that called the function. If the precondition is not met, the result is undefi ned.
 
-> All functions must fi rst be declared with a function heading so the
-> compiler can determine whether the function calls are correct. Th ese
-> function headings also help the programmer properly call those
-> functions. If you peruse the fi le cmath, you will see many such
-> function headings. Th is section concentrates on how to read these
-> function headings and how to use other documentation describing what a
-> particular function expects and what that function will do. Th ese are
-> called the function’s preconditions and postconditions, respectively.
+| Function Call | Return Result |
+|---------------|---------------|
+| sqrt(4.0)  | The precondition was met: 2.0 is returned.|
+| sqrt(-1.0) | The precondition was not met. Th is function call may return nan (not a number) |
 
-3.3.1 PRECONDITIONS AND POSTCONDITIONS
+Another implied precondition to calling a function and getting predictable results is this: the client code must supply a proper type of argument. For example, the ceil function takes one double argument. This implies the argument must be convertible to a double, which includes short, int, oat, and even char. For example, ceil will not accept a string argument. Th is could be stated as an obvious precondition like this:
 
-> For a function to behave properly, certain conditions are presumed.
-> Consider the sqrt function, which presumes that the argument is
-> greater than or equal to 0.0. Th e *preconditions* of a function state
-> assumptions made about arguments to the function. If the preconditions
-> are not met, all bets are off —the function’s behavior is undefi ned.
-> Some systems cause program termination with an arithmetic overfl ow
-> error. Other systems may return values such as -1.\#IND or nan, which
-> represents the value “Not a Number.” Th e function call must satisfy
-> the preconditions in order to have predictable results.
->
-> Th e other part of the contract is the *postconditions*—the statements
-> that describe what the function does if the preconditions were met. Th
-> e pre- and postconditions are often written as part of the function
-> documentation. For example, here is the sqrt function documented with
-> preconditions and postconditions:
->
-> double sqrt(double x)
->
-> // precondition: x is not negative (x >= 0)
->
-> // postcondition: Square root of x replaces the function call
->
-> Th e comments indicate the argument must be greater than or equal to
-> 0.0. If this precondition is met, the square root of that argument is
-> returned to the *client*—the code that called the function. If the
-> precondition is not met, the result is undefi ned.
+```C++
+double ceil(double x)
+// precondition: Argument must be convertible to a double
+// postcondition: Return the smallest integer >= x
+```
 
-  > **Function Call **   **Return Result**
-  ---------------------- ----------------------------------------------------------------------------
-  sqrt(4.0)              > Th e precondition was met: 2.0 is returned.
-  sqrt(-1.0)             > Th e precondition was not met. Th is function call may return nan (not a
-                         > number)
+However, this information is implied in the parameter declaration. The compiler detects improper argument. From now on, such function preconditions will not be written.
 
-> Another implied precondition to calling a function and getting
-> predictable results is this: the client code must supply a proper type
-> of argument. For example, the ceil function takes one double argument.
-> Th is implies the argument must be convertible to a double, which
-> includes short, int, oat, and even char. For example, ceil will not
-> accept a string argument. Th is could be stated as an obvious
-> precondition like this:
->
-> double ceil(double x)
->
-> // precondition: Argument must be convertible to a double
->
-> // postcondition: Return the smallest integer >= x
->
-> However, this information is implied in the parameter declaration. Th
-> e compiler detects improper argument. From now on, such function
-> preconditions will not be written.
->
-> Th e compiler does not detect preconditions. For example, it is
-> syntactically correct to have a program with this:
->
-> cout << sqrt(-1.0); // Return depends on the system in use
->
-> From now on, the label for preconditions will be abbreviated as pre:
-> and for postconditions as post:. Th e same function (ceil) may now be
-> documented as follows:
->
-> double ceil(double x) // post: Return the smallest integer >= x
->
-> It should be noted that the use of pre: and post: after the function
-> headings is not required. Diff erent people document functions in
-> their own ways. Th is documentation is particular to this textbook.
+The compiler does not detect preconditions. For example, it is syntactically correct to have a program with this:
 
-3.3.2 FUNCTION HEADINGS
+```C++
+cout << sqrt(-1.0); // Return depends on the system in use
+```
 
-> Pre- and postconditions help programmers determine the proper use of
-> functions. If provided as documentation, they are usually listed after
-> the function heading. Th e function heading also provides very
-> important usage information such as the type of value returned and the
-> number of arguments required by the function. Here is the general form
-> of a function heading:
+From now on, the label for preconditions will be abbreviated as pre: and for postconditions as post:. Th e same function (ceil) may now be documented as follows:
 
-General Form 3.2 *Function Heading*
+```C++
+double ceil(double x) // post: Return the smallest integer >= x
+```
+
+It should be noted that the use of pre: and post: after the function headings is not required. Diff erent people document functions in their own ways. Th is documentation is particular to this textbook.
+
+### 3.3.2 FUNCTION HEADINGS
+
+Pre- and postconditions help programmers determine the proper use of functions. If provided as documentation, they are usually listed after the function heading. Th e function heading also provides very important usage information such as the type of value returned and the number of arguments required by the function. Here is the general form of a function heading:
+
+**General Form 3.2** *Function Heading*
 
 *return-type function-name* (*parameter-1, parameter-2, parameter-n*)
 
-> Th e *return-type* may be any valid C++ class or the keyword void. A
-> void function does not return anything. Th e parameters between ( and
-> ) may either be value parameters, reference parameters, or const
-> reference parameters. Value parameters are up fi rst.
->
-> A function may require one or more arguments. Values are passed to
-> functions by adding value parameters of this form:
->
-> ©
+The *return-type* may be any valid C++ class or the keyword void. A void function does not return anything. Th e parameters between ( and ) may either be value parameters, reference parameters, or const reference parameters. Value parameters are up first.
 
-General Form 3.3 *Value Parameter*
+A function may require one or more arguments. Values are passed to functions by adding value parameters of this form:
 
-*class-name identi er*
+**General Form 3.3** *Value Parameter*
 
-> **Examples of Standard C++ Function Headings:**
->
-> int isapha(int c) int tolower(int c); double round (double x); double
-> remainder(double numerator, double denom);
->
-> Function headings specify the type of value returned by the function,
-> the function name, and the number of arguments the programmer must
-> supply. Th e class of arguments required is specifi ed as the
-> *class-name* of each parameter between the parentheses. For example,
-> because the parameters in pow below, x and y, are declared as double,
-> one can ascertain that the type of each argument in calls to pow must
-> be double, or at least convertible to double—an integer for example.
->
-> double pow(double x, double y)
->
-> // pre: When y has a fractional part, x must be positive
->
-> // When y is an integer, x may be negative
->
-> // post: Returns x to the yth power
->
-> Also note that the function name is pow and its return type is double.
->
-> Although the complete implementation of the pow function is not
-> present, the information supplied by the preconditions, the
-> postconditions and the function heading are enough to eff ectively
-> utilize the function.
->
-> To summarize, a function heading with pre- and postconditions provides
-> the following information:
+*class-name identifier*
 
-1.  the *return-type* that provides the type of value returned by the
-    > function
+**Examples of Standard C++ Function Headings:**
 
-2.  the *function-name* that begins a valid function call
+```C++
+int isapha(int c)
+int tolower(int c);
+double round (double x);
+double remainder(double numerator, double denom);
+```
 
-3.  the *parameter-list* that provides the number and class of arguments
-    > required in the function call
+Function headings specify the type of value returned by the function, the function name, and the number of arguments the programmer must supply. The class of arguments required is specifi ed as the *class-name* of each parameter between the parentheses. For example, because the parameters in pow below, x and y, are declared as double, one can ascertain that the type of each argument in calls to pow must be double, or at least convertible to double—an integer for example.
 
-4.  pre:, which describes what must be true before calling this function
+```C++
+double pow(double x, double y)
+// pre:  When y has a fractional part, x must be positive
+//       When y is an integer, x may be negative
+// post: Returns x to the yth power
+```
 
-5.  post:, which describes what the function does if the preconditions
-    > are met
+Also note that the function name is pow and its return type is double.
 
-> In addition to revealing information to programmers, function headings
-> supply information to the compiler to verify the validity of every
-> attempt to call that function. Th e compiler informs you if a function
-> is not called properly. Consider the oor function heading:
->
-> double oor(double x)
->
-> // post: Returns the largest integer <= x
->
-> Th e return type is double. Th is means that a double replaces any
-> valid call to oor. Th erefore, the function call can be used wherever
-> a double value is legal—in an arithmetic expression, for instance.
-> Also present is the function name oor—very important information for
-> eff ectively calling this or any particular function. Th e parameter
-> list shows one double parameter named x. So the client code must
-> supply exactly one numeric argument to properly call oor. For example,
-> the following is a valid call to double and it is used in a proper
-> spot in the code:
+Although the complete implementation of the pow function is not present, the information supplied by the preconditions, the postconditions and the function heading are enough to eff ectively utilize the function.
 
-double x; x = oor(5.55555); // This assignment is okay However, these
-function calls are invalid:
+To summarize, a function heading with pre- and postconditions provides the following information:
 
-> string s; s = oor(5.5555); // Error: oor doesn't return a string cout
-> << oor(1.0, 2.0); // Error: too many arguments cout <<
-> oor("wrong type"); // Error: wrong type argument cout << oor();
-> // Error: too few arguments
+1. the *return-type* that provides the type of value returned by the function
+2. the *function-name* that begins a valid function call
+3. the *parameter-list* that provides the number and class of arguments required in the function call
+4. pre:, which describes what must be true before calling this function
+5. post:, which describes what the function does if the preconditions are met
 
-SELF-CHECK
+In addition to revealing information to programmers, function headings supply information to the compiler to verify the validity of every attempt to call that function. Th e compiler informs you if a function is not called properly. Consider the oor function heading:
 
-> 3-12 Given the following function heading, write “valid” for each
-> correct function call or explain why it is not valid.
->
-> double ceil(double x)
+```C++
+double oor(double x)
+// post: Returns the largest integer <= x
+```
 
-  a\. ceil(1.1)        d\. ceil("Ceila")
-  -------------------- -------------------
-  b\. oor(2.9)         e\. ceil -0.1
-  c\. ceil(1.2, 3.0)   f\. ceil(-3)
+The return type is double. Th is means that a double replaces any valid call to oor. Th erefore, the function call can be used wherever a double value is legal—in an arithmetic expression, for instance. Also present is the function name oor—very important information for effectively calling this or any particular function. The parameter list shows one double parameter named x. So the client code must supply exactly one numeric argument to properly call oor. For example, the following is a valid call to double and it is used in a proper spot in the code:
 
-> 3-13 Describe the error in each of the following attempts at function
-> headings:
+```C++
+double x;
+x = floor(5.55555); // This assignment is okay
+```
+
+However, these function calls are invalid:
+
+```C++
+string s;
+s = floor(5.5555); // Error: floor doesn't return a string
+cout << floor(1.0, 2.0);     // Error: too many arguments
+cout << floor("wrong type"); // Error: wrong type argument
+cout << floor();             // Error: too few arguments
+```
+
+**SELF-CHECK**
+
+3-12 Given the following function heading, write “valid” for each correct function call or explain why it is not valid.
+
+```C++
+double ceil(double x)
+```
+
+  a. ceil(1.1)        d. ceil("Ceila")
+  b. oor(2.9)         e. ceil -0.1
+  c. ceil(1.2, 3.0)   f. ceil(-3)
+
+3-13 Describe the error in each of the following attempts at function headings:
 
 a.  double f ( x )
-
 b.  int smaller(int n1 int n2)
-
 c.  toUpper(string s)
-
 d.  myClass g()
-
 e.  int twoStrings(string s1, string s2,)
-
 f.  unknownType initialize(" lename.dat")
 
-> Use the following documentation for the questions that follow:
->
-> double oor(double x)
->
-> // post: The oor function returns a oating-point value
->
-> // representing the largest integer that is less than or
->
-> // equal to x
+Use the following documentation for the questions that follow:
 
-14. Write four function calls (with diff erent arguments) that would
-    > help explain how oor works to someone who has never seen
-    > it before.
+```C++
+double floor(double x)
+// post: The oor function returns a oating-point value
+// representing the largest integer that is less than or
+// equal to x
+```
 
-15. Write the values returned from each of the four function calls in
-    > your answer to the preceding question.
+3-14. Write four function calls (with diff erent arguments) that would help explain how oor works to someone who has never seen it before.
 
-3.3.3 ARGUMENT / PARAMETER ASSOCIATIONS
+3-15. Write the values returned from each of the four function calls in your answer to the preceding question.
 
-> A function heading may list zero, one, two, and sometimes more
-> parameters. If there is more than one, the parameters must be
-> separated by commas. Th e next function heading has two parameters—str
-> and x.
->
-> double twoParameters(string str, double x)
->
-> Exactly one argument of an acceptable class is required for each
-> parameter listed in a function heading. Th erefore, precisely two
-> arguments must be present in every call to twoParameters. Th e
-> compiler will report an error if you call this particular function
-> with any other number of arguments than two. Additionally, the type
-> and position of the arguments must match the type and position of the
-> parameters. For example, a double argument cannot be associated with a
-> string parameter. Here are some examples of correct calls of
-> twoParameters:
->
-> Valid Calls to the twoParameters Function
->
-> twoParameters("abc", 1.2); twoParameters("another string", 15);
-> twoParameters("\$", 3.4);
+### 3.3.3 ARGUMENT / PARAMETER ASSOCIATIONS
 
-Th e following attempts to call twoParameters result in compile time
+A function heading may list zero, one, two, and sometimes more parameters. If there is more than one, the parameters must be separated by commas. Th e next function heading has two parameters—str and x.
+
+```C++
+double twoParameters(string str, double x)
+```
+
+Exactly one argument of an acceptable class is required for each parameter listed in a function heading. Th erefore, precisely two arguments must be present in every call to twoParameters. The compiler will report an error if you call this particular function with any other number of arguments than two. Additionally, the type and position of the arguments must match the type and position of the parameters. For example, a double argument cannot be associated with a string parameter. Here are some examples of correct calls of twoParameters:
+
+**Valid Calls to the twoParameters Function**
+
+```C++
+twoParameters("abc", 1.2);
+twoParameters("another string", 15);
+twoParameters("\$", 3.4);
+```
+
+The following attempts to call twoParameters result in compile time
 errors:
 
-  --------------------------------- --------------------------------------------------
-  **Error **
-  twoParameters("a");
-  twoParameters("1.1", "2.2");
-  > twoParameters(1.1, 1.1);
-  > twoParameters("a", 2.2, 3.3);
-  twoParameters;
-  --------------------------------- --------------------------------------------------
+| Error                         | Reason for Error|
+|-------------------------------|-----------------|
+| twoParameters("a");           | Needs two arguments. |
+| twoParameters("1.1", "2.2");  | The string “ 2.2 ” can’t be assigned to a double . |
+| twoParameters(1.1, 1.1);      | The number 1.1 can’t be assigned to a string . |
+| twoParameters("a", 2.2, 3.3); | One too many arguments. |
+| twoParameters;                | Generate a warning. Statement has no effect. |
 
-> Arguments associate with parameters by position—fi rst argument to the
-> fi rst parameter, second argument to the second parameter, and so on.
-> For example, when twoParameters is called, the fi rst parameter is
-> assigned the value of the fi rst argument and the second argument to
-> the
->
-> function is copied into the second parameter x. When twoParameters is
-> called with arguments "abc" and 1.2, like this:
->
-> int twoParameters(string str, double x)
+Arguments associate with parameters by position—fi rst argument to the first parameter, second argument to the second parameter, and so on. For example, when twoParameters is called, the fi rst parameter is assigned the value of the fi rst argument and the second argument to the function is copied into the second parameter x. When twoParameters is called with arguments "abc" and 1.2, like this:
 
-result4 = twoParameters ("abc", 1.2); it’s as if these two assignment
-operations occur:
+```C++
+int twoParameters(string str, double x)
+                           ↑     ↑
+result4 = twoParameters ("abc", 1.2);
+```
 
-> str = "abc"; x = 1.2;
->
+it’s as if these two assignment operations occur:
+
+```C++
+str = "abc";
+x = 1.2;
+```
+
 > Whatever happens inside twoParameters now depends on the values of
 > these two parameters. Th e parameters are used inside the function to
 > produce the return result.
@@ -596,7 +506,7 @@ c.  number of arguments f. class of third argument
         > remainder(5.0, 2.0) must return 0.5 and remainder(1, 3) must
         > return 0.3333333.
 
-3.3.4 A FEW FUNCTIONS FOR int, char, AND bool
+### 3.3.4 A FEW FUNCTIONS FOR int, char, AND bool
 
 > Some free functions work with the other primitive types. For example,
 > the standard C++ library has free functions that can be used in an
